# BeerDrone

./: .gitignore  .gitmodules  fabriHints.txt  install_geographic_lib_dataset.sh  launch.sh  launch_setup.sh  powerfulLinks.txt  readme.md  setup.sh
.catkin_tools/profiles/default/: devel_collisions.txt
BeerDroneAssessments/C++/: CMakeLists.txt  main.cpp
BeerDroneAssessments/C++/include/: matcherTriangulator.h  orbExtractor.h  utility.h
BeerDroneAssessments/C++/src/: matcherTriangulator.cpp  orbExtractor.cpp
Docs/: DesignSpecsAndTimeline.txt  M0014 Tracking Camera.step  TalkWithFabrizioSchiano05_07_2021.txt  build_steps.txt  run_instuctions.txt
FirmwareAddons/launch/: mavros_posix_sitl.launch
FirmwareAddons/worlds/: empty_modified.world
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
logs/offb/: build.cmake.000.log.stderr  build.cmake.002.log.stderr
logs/stereo_particle_slam/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.005.log.stderr  build.make.008.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.021.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.039.log.stderr
src/offb/: CMakeLists.txt
src/stereo_particle_slam/: CMakeLists.txt  package.xml
(+36 files in other folders)
